New Feature  - User can swipe spacebar to switch input type(KR, EN, SPECIAL etc..).  - User can customize setting for swipeable spacebar feature.

--- a/app/src/main/res/layout/fragment_boilerplatetext.xml
+++ b/app/src/main/res/layout/fragment_boilerplatetext.xml
@@ -51,7 +51,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/recyview_boilerplate_boilerplatetext_items_container"
                 app:layout_constraintTop_toTopOf="parent"
-                app:onTouch="@{kbservice.repeatListenerDels[9]}" />
+                app:onTouch="@{kbservice.repeatTouchListenerDels[9]}" />
 
             <Button
                 android:id="@+id/btn_boilerplate_space"
@@ -70,7 +70,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/recyview_boilerplate_boilerplatetext_items_container"
                 app:layout_constraintTop_toBottomOf="@id/imgbtn_boilerplate_delete"
-                app:onTouch="@{kbservice.repeatListenerSpecials[22]}" />
+                app:onTouch="@{kbservice.repeatTouchListenerSpecials[22]}" />
 
             <ImageButton
                 android:id="@+id/imgbtn_boilerplate_enter"
