--- a/app/src/main/res/layout/fragment_keyboard_number.xml
+++ b/app/src/main/res/layout/fragment_keyboard_number.xml
@@ -44,7 +44,7 @@
                     app:customTheme_view="@{0}"
                     app:fontBold="@{kbviewmodel.inputTypeState!=null ? kbviewmodel.inputTypeState : InputTypeState.NUMBER}"
                     app:customFontStyle="@{kbviewmodel.kbFontType}"
-                    app:onTouch="@{kbservice.repeatListenerChars[78]}" />
+                    app:onTouch="@{kbservice.repeatTouchListenerChars[78]}" />
 
                 <Button
                     android:id="@+id/btn_num_2"
@@ -60,7 +60,7 @@
                     app:customTheme_view="@{0}"
                     app:fontBold="@{kbviewmodel.inputTypeState!=null ? kbviewmodel.inputTypeState : InputTypeState.NUMBER}"
                     app:customFontStyle="@{kbviewmodel.kbFontType}"
-                    app:onTouch="@{kbservice.repeatListenerChars[79]}" />
+                    app:onTouch="@{kbservice.repeatTouchListenerChars[79]}" />
 
                 <Button
                     android:id="@+id/btn_num_3"
@@ -76,7 +76,7 @@
                     app:customTheme_view="@{0}"
                     app:fontBold="@{kbviewmodel.inputTypeState!=null ? kbviewmodel.inputTypeState : InputTypeState.NUMBER}"
                     app:customFontStyle="@{kbviewmodel.kbFontType}"
-                    app:onTouch="@{kbservice.repeatListenerChars[80]}" />
+                    app:onTouch="@{kbservice.repeatTouchListenerChars[80]}" />
 
                 <ImageButton
                     android:id="@+id/imgbtn_num_del"
@@ -91,7 +91,7 @@
                     app:customTheme_padding="@{kbviewmodel.kbResultedHeight}"
                     app:customTheme_theme="@{kbviewmodel.kbTheme}"
                     app:customTheme_view="@{3}"
-                    app:onTouch="@{kbservice.repeatListenerDels[4]}" />
+                    app:onTouch="@{kbservice.repeatTouchListenerDels[4]}" />
             </LinearLayout>
 
             <LinearLayout
@@ -115,7 +115,7 @@
                     app:customTheme_view="@{0}"
                     app:fontBold="@{kbviewmodel.inputTypeState!=null ? kbviewmodel.inputTypeState : InputTypeState.NUMBER}"
                     app:customFontStyle="@{kbviewmodel.kbFontType}"
-                    app:onTouch="@{kbservice.repeatListenerChars[81]}" />
+                    app:onTouch="@{kbservice.repeatTouchListenerChars[81]}" />
 
                 <Button
                     android:id="@+id/btn_num_5"
@@ -131,7 +131,7 @@
                     app:customTheme_view="@{0}"
                     app:fontBold="@{kbviewmodel.inputTypeState!=null ? kbviewmodel.inputTypeState : InputTypeState.NUMBER}"
                     app:customFontStyle="@{kbviewmodel.kbFontType}"
-                    app:onTouch="@{kbservice.repeatListenerChars[82]}" />
+                    app:onTouch="@{kbservice.repeatTouchListenerChars[82]}" />
 
                 <Button
                     android:id="@+id/btn_num_6"
@@ -147,7 +147,7 @@
                     app:customTheme_view="@{0}"
                     app:fontBold="@{kbviewmodel.inputTypeState!=null ? kbviewmodel.inputTypeState : InputTypeState.NUMBER}"
                     app:customFontStyle="@{kbviewmodel.kbFontType}"
-                    app:onTouch="@{kbservice.repeatListenerChars[83]}" />
+                    app:onTouch="@{kbservice.repeatTouchListenerChars[83]}" />
 
                 <Button
                     android:id="@+id/btn_num_space"
@@ -163,7 +163,7 @@
                     app:customTheme_view="@{2}"
                     app:fontBold="@{kbviewmodel.inputTypeState!=null ? kbviewmodel.inputTypeState : InputTypeState.NUMBER}"
                     app:customFontStyle="@{kbviewmodel.kbFontType}"
-                    app:onTouch="@{kbservice.repeatListenerSpecials[11]}" />
+                    app:onTouch="@{kbservice.repeatTouchListenerSpecials[11]}" />
             </LinearLayout>
 
             <LinearLayout
@@ -186,7 +186,7 @@
                     app:customTheme_view="@{0}"
                     app:fontBold="@{kbviewmodel.inputTypeState!=null ? kbviewmodel.inputTypeState : InputTypeState.NUMBER}"
                     app:customFontStyle="@{kbviewmodel.kbFontType}"
-                    app:onTouch="@{kbservice.repeatListenerChars[84]}" />
+                    app:onTouch="@{kbservice.repeatTouchListenerChars[84]}" />
 
                 <Button
                     android:id="@+id/btn_num_8"
@@ -202,7 +202,7 @@
                     app:customTheme_view="@{0}"
                     app:fontBold="@{kbviewmodel.inputTypeState!=null ? kbviewmodel.inputTypeState : InputTypeState.NUMBER}"
                     app:customFontStyle="@{kbviewmodel.kbFontType}"
-                    app:onTouch="@{kbservice.repeatListenerChars[85]}" />
+                    app:onTouch="@{kbservice.repeatTouchListenerChars[85]}" />
 
                 <Button
                     android:id="@+id/btn_num_9"
@@ -218,7 +218,7 @@
                     app:customTheme_view="@{0}"
                     app:fontBold="@{kbviewmodel.inputTypeState!=null ? kbviewmodel.inputTypeState : InputTypeState.NUMBER}"
                     app:customFontStyle="@{kbviewmodel.kbFontType}"
-                    app:onTouch="@{kbservice.repeatListenerChars[86]}" />
+                    app:onTouch="@{kbservice.repeatTouchListenerChars[86]}" />
 
                 <ImageButton
                     android:id="@+id/imgbtn_num_enter"
@@ -271,7 +271,7 @@
                     app:customTheme_view="@{2}"
                     app:fontBold="@{kbviewmodel.inputTypeState!=null ? kbviewmodel.inputTypeState : InputTypeState.NUMBER}"
                     app:customFontStyle="@{kbviewmodel.kbFontType}"
-                    app:onTouch="@{kbservice.repeatListenerSpecials[11]}" />
+                    app:onTouch="@{kbservice.repeatTouchListenerSpecials[11]}" />
 
                 <Button
                     android:id="@+id/btn_num_0"
@@ -287,7 +287,7 @@
                     app:customTheme_view="@{0}"
                     app:fontBold="@{kbviewmodel.inputTypeState!=null ? kbviewmodel.inputTypeState : InputTypeState.NUMBER}"
                     app:customFontStyle="@{kbviewmodel.kbFontType}"
-                    app:onTouch="@{kbservice.repeatListenerChars[87]}" />
+                    app:onTouch="@{kbservice.repeatTouchListenerChars[87]}" />
 
                 <Button
                     android:id="@+id/btn_num_shop"
@@ -303,7 +303,7 @@
                     app:customTheme_view="@{2}"
                     app:fontBold="@{kbviewmodel.inputTypeState!=null ? kbviewmodel.inputTypeState : InputTypeState.NUMBER}"
                     app:customFontStyle="@{kbviewmodel.kbFontType}"
-                    app:onTouch="@{kbservice.repeatListenerChars[88]}" />
+                    app:onTouch="@{kbservice.repeatTouchListenerChars[88]}" />
 
                 <Button
                     android:id="@+id/btn_num_dot"
@@ -319,7 +319,7 @@
                     app:customTheme_view="@{2}"
                     app:fontBold="@{kbviewmodel.inputTypeState!=null ? kbviewmodel.inputTypeState : InputTypeState.NUMBER}"
                     app:customFontStyle="@{kbviewmodel.kbFontType}"
-                    app:onTouch="@{kbservice.repeatListenerSpecials[12]}" />
+                    app:onTouch="@{kbservice.repeatTouchListenerSpecials[12]}" />
 
                 <Button
                     android:id="@+id/btn_num_comma"
@@ -335,7 +335,7 @@
                     app:customTheme_view="@{2}"
                     app:fontBold="@{kbviewmodel.inputTypeState!=null ? kbviewmodel.inputTypeState : InputTypeState.NUMBER}"
                     app:customFontStyle="@{kbviewmodel.kbFontType}"
-                    app:onTouch="@{kbservice.repeatListenerSpecials[13]}" />
+                    app:onTouch="@{kbservice.repeatTouchListenerSpecials[13]}" />
             </LinearLayout>
         </LinearLayout>
     </FrameLayout>
