--- a/app/src/main/res/layout/fragment_keyboard_qwerty_kr_normal.xml
+++ b/app/src/main/res/layout/fragment_keyboard_qwerty_kr_normal.xml
@@ -44,7 +44,7 @@
                     app:customTheme_view="@{0}"
                     app:fontBold="@{kbviewmodel.inputTypeState!=null ? kbviewmodel.inputTypeState : InputTypeState.KR_NORMAL}"
                     app:customFontStyle="@{kbviewmodel.kbFontType}"
-                    app:onTouch="@{kbservice.repeatListenerChars[0]}" />
+                    app:onTouch="@{kbservice.repeatTouchListenerChars[0]}" />
 
                 <Button
                     android:id="@+id/btn_kr_qwerty_w"
@@ -60,7 +60,7 @@
                     app:customTheme_view="@{0}"
                     app:fontBold="@{kbviewmodel.inputTypeState!=null ? kbviewmodel.inputTypeState : InputTypeState.KR_NORMAL}"
                     app:customFontStyle="@{kbviewmodel.kbFontType}"
-                    app:onTouch="@{kbservice.repeatListenerChars[1]}" />
+                    app:onTouch="@{kbservice.repeatTouchListenerChars[1]}" />
 
                 <Button
                     android:id="@+id/btn_kr_qwerty_e"
@@ -76,7 +76,7 @@
                     app:customTheme_view="@{0}"
                     app:fontBold="@{kbviewmodel.inputTypeState!=null ? kbviewmodel.inputTypeState : InputTypeState.KR_NORMAL}"
                     app:customFontStyle="@{kbviewmodel.kbFontType}"
-                    app:onTouch="@{kbservice.repeatListenerChars[2]}" />
+                    app:onTouch="@{kbservice.repeatTouchListenerChars[2]}" />
 
                 <Button
                     android:id="@+id/btn_kr_qwerty_r"
@@ -92,7 +92,7 @@
                     app:customTheme_view="@{0}"
                     app:fontBold="@{kbviewmodel.inputTypeState!=null ? kbviewmodel.inputTypeState : InputTypeState.KR_NORMAL}"
                     app:customFontStyle="@{kbviewmodel.kbFontType}"
-                    app:onTouch="@{kbservice.repeatListenerChars[3]}" />
+                    app:onTouch="@{kbservice.repeatTouchListenerChars[3]}" />
 
                 <Button
                     android:id="@+id/btn_kr_qwerty_t"
@@ -108,7 +108,7 @@
                     app:customTheme_view="@{0}"
                     app:fontBold="@{kbviewmodel.inputTypeState!=null ? kbviewmodel.inputTypeState : InputTypeState.KR_NORMAL}"
                     app:customFontStyle="@{kbviewmodel.kbFontType}"
-                    app:onTouch="@{kbservice.repeatListenerChars[4]}" />
+                    app:onTouch="@{kbservice.repeatTouchListenerChars[4]}" />
 
                 <Button
                     android:id="@+id/btn_kr_qwerty_blank"
@@ -135,7 +135,7 @@
                     app:fontBold="@{kbviewmodel.inputTypeState!=null ? kbviewmodel.inputTypeState : InputTypeState.KR_NORMAL}"
                     app:customFontStyle="@{kbviewmodel.kbFontType}"
                     app:layout_weight="@{kbviewmodel.kbRightSize}"
-                    app:onTouch="@{kbservice.repeatListenerChars[5]}"
+                    app:onTouch="@{kbservice.repeatTouchListenerChars[5]}"
                     app:weight_constant="@{1.0F}" />
 
                 <Button
@@ -153,7 +153,7 @@
                     app:fontBold="@{kbviewmodel.inputTypeState!=null ? kbviewmodel.inputTypeState : InputTypeState.KR_NORMAL}"
                     app:customFontStyle="@{kbviewmodel.kbFontType}"
                     app:layout_weight="@{kbviewmodel.kbRightSize}"
-                    app:onTouch="@{kbservice.repeatListenerChars[6]}"
+                    app:onTouch="@{kbservice.repeatTouchListenerChars[6]}"
                     app:weight_constant="@{1.0F}" />
 
                 <Button
@@ -171,7 +171,7 @@
                     app:fontBold="@{kbviewmodel.inputTypeState!=null ? kbviewmodel.inputTypeState : InputTypeState.KR_NORMAL}"
                     app:customFontStyle="@{kbviewmodel.kbFontType}"
                     app:layout_weight="@{kbviewmodel.kbRightSize}"
-                    app:onTouch="@{kbservice.repeatListenerChars[7]}"
+                    app:onTouch="@{kbservice.repeatTouchListenerChars[7]}"
                     app:weight_constant="@{1.0F}" />
 
                 <Button
@@ -189,7 +189,7 @@
                     app:fontBold="@{kbviewmodel.inputTypeState!=null ? kbviewmodel.inputTypeState : InputTypeState.KR_NORMAL}"
                     app:customFontStyle="@{kbviewmodel.kbFontType}"
                     app:layout_weight="@{kbviewmodel.kbRightSize}"
-                    app:onTouch="@{kbservice.repeatListenerChars[8]}"
+                    app:onTouch="@{kbservice.repeatTouchListenerChars[8]}"
                     app:weight_constant="@{1.0F}" />
 
                 <Button
@@ -207,7 +207,7 @@
                     app:fontBold="@{kbviewmodel.inputTypeState!=null ? kbviewmodel.inputTypeState : InputTypeState.KR_NORMAL}"
                     app:customFontStyle="@{kbviewmodel.kbFontType}"
                     app:layout_weight="@{kbviewmodel.kbRightSize}"
-                    app:onTouch="@{kbservice.repeatListenerChars[9]}"
+                    app:onTouch="@{kbservice.repeatTouchListenerChars[9]}"
                     app:weight_constant="@{1.0F}" />
             </LinearLayout>
 
@@ -231,7 +231,7 @@
                     app:customTheme_view="@{0}"
                     app:fontBold="@{kbviewmodel.inputTypeState!=null ? kbviewmodel.inputTypeState : InputTypeState.KR_NORMAL}"
                     app:customFontStyle="@{kbviewmodel.kbFontType}"
-                    app:onTouch="@{kbservice.repeatListenerChars[10]}" />
+                    app:onTouch="@{kbservice.repeatTouchListenerChars[10]}" />
 
                 <Button
                     android:id="@+id/btn_kr_qwerty_s"
@@ -247,7 +247,7 @@
                     app:customTheme_view="@{0}"
                     app:fontBold="@{kbviewmodel.inputTypeState!=null ? kbviewmodel.inputTypeState : InputTypeState.KR_NORMAL}"
                     app:customFontStyle="@{kbviewmodel.kbFontType}"
-                    app:onTouch="@{kbservice.repeatListenerChars[11]}" />
+                    app:onTouch="@{kbservice.repeatTouchListenerChars[11]}" />
 
                 <Button
                     android:id="@+id/btn_kr_qwerty_d"
@@ -263,7 +263,7 @@
                     app:customTheme_view="@{0}"
                     app:fontBold="@{kbviewmodel.inputTypeState!=null ? kbviewmodel.inputTypeState : InputTypeState.KR_NORMAL}"
                     app:customFontStyle="@{kbviewmodel.kbFontType}"
-                    app:onTouch="@{kbservice.repeatListenerChars[12]}" />
+                    app:onTouch="@{kbservice.repeatTouchListenerChars[12]}" />
 
                 <Button
                     android:id="@+id/btn_kr_qwerty_f"
@@ -279,7 +279,7 @@
                     app:customTheme_view="@{0}"
                     app:fontBold="@{kbviewmodel.inputTypeState!=null ? kbviewmodel.inputTypeState : InputTypeState.KR_NORMAL}"
                     app:customFontStyle="@{kbviewmodel.kbFontType}"
-                    app:onTouch="@{kbservice.repeatListenerChars[13]}" />
+                    app:onTouch="@{kbservice.repeatTouchListenerChars[13]}" />
 
                 <Button
                     android:id="@+id/btn_kr_qwerty_g"
@@ -295,7 +295,7 @@
                     app:customTheme_view="@{0}"
                     app:fontBold="@{kbviewmodel.inputTypeState!=null ? kbviewmodel.inputTypeState : InputTypeState.KR_NORMAL}"
                     app:customFontStyle="@{kbviewmodel.kbFontType}"
-                    app:onTouch="@{kbservice.repeatListenerChars[14]}" />
+                    app:onTouch="@{kbservice.repeatTouchListenerChars[14]}" />
 
                 <Button
                     android:id="@+id/btn_kr_qwerty_h"
@@ -312,7 +312,7 @@
                     app:fontBold="@{kbviewmodel.inputTypeState!=null ? kbviewmodel.inputTypeState : InputTypeState.KR_NORMAL}"
                     app:customFontStyle="@{kbviewmodel.kbFontType}"
                     app:layout_weight="@{kbviewmodel.kbRightSize}"
-                    app:onTouch="@{kbservice.repeatListenerChars[15]}"
+                    app:onTouch="@{kbservice.repeatTouchListenerChars[15]}"
                     app:weight_constant="@{1.0F}" />
 
                 <Button
@@ -330,7 +330,7 @@
                     app:fontBold="@{kbviewmodel.inputTypeState!=null ? kbviewmodel.inputTypeState : InputTypeState.KR_NORMAL}"
                     app:customFontStyle="@{kbviewmodel.kbFontType}"
                     app:layout_weight="@{kbviewmodel.kbRightSize}"
-                    app:onTouch="@{kbservice.repeatListenerChars[16]}"
+                    app:onTouch="@{kbservice.repeatTouchListenerChars[16]}"
                     app:weight_constant="@{1.0F}" />
 
                 <Button
@@ -348,7 +348,7 @@
                     app:fontBold="@{kbviewmodel.inputTypeState!=null ? kbviewmodel.inputTypeState : InputTypeState.KR_NORMAL}"
                     app:customFontStyle="@{kbviewmodel.kbFontType}"
                     app:layout_weight="@{kbviewmodel.kbRightSize}"
-                    app:onTouch="@{kbservice.repeatListenerChars[17]}"
+                    app:onTouch="@{kbservice.repeatTouchListenerChars[17]}"
                     app:weight_constant="@{1.0F}" />
 
                 <Button
@@ -366,7 +366,7 @@
                     app:fontBold="@{kbviewmodel.inputTypeState!=null ? kbviewmodel.inputTypeState : InputTypeState.KR_NORMAL}"
                     app:customFontStyle="@{kbviewmodel.kbFontType}"
                     app:layout_weight="@{kbviewmodel.kbRightSize}"
-                    app:onTouch="@{kbservice.repeatListenerChars[18]}"
+                    app:onTouch="@{kbservice.repeatTouchListenerChars[18]}"
                     app:weight_constant="@{1.3F}" />
             </LinearLayout>
 
@@ -404,7 +404,7 @@
                     app:customTheme_view="@{0}"
                     app:fontBold="@{kbviewmodel.inputTypeState!=null ? kbviewmodel.inputTypeState : InputTypeState.KR_NORMAL}"
                     app:customFontStyle="@{kbviewmodel.kbFontType}"
-                    app:onTouch="@{kbservice.repeatListenerChars[19]}" />
+                    app:onTouch="@{kbservice.repeatTouchListenerChars[19]}" />
 
                 <Button
                     android:id="@+id/btn_kr_qwerty_x"
@@ -420,7 +420,7 @@
                     app:customTheme_view="@{0}"
                     app:fontBold="@{kbviewmodel.inputTypeState!=null ? kbviewmodel.inputTypeState : InputTypeState.KR_NORMAL}"
                     app:customFontStyle="@{kbviewmodel.kbFontType}"
-                    app:onTouch="@{kbservice.repeatListenerChars[20]}" />
+                    app:onTouch="@{kbservice.repeatTouchListenerChars[20]}" />
 
                 <Button
                     android:id="@+id/btn_kr_qwerty_c"
@@ -436,7 +436,7 @@
                     app:customTheme_view="@{0}"
                     app:fontBold="@{kbviewmodel.inputTypeState!=null ? kbviewmodel.inputTypeState : InputTypeState.KR_NORMAL}"
                     app:customFontStyle="@{kbviewmodel.kbFontType}"
-                    app:onTouch="@{kbservice.repeatListenerChars[21]}" />
+                    app:onTouch="@{kbservice.repeatTouchListenerChars[21]}" />
 
                 <Button
                     android:id="@+id/btn_kr_qwerty_v"
@@ -452,7 +452,7 @@
                     app:customTheme_view="@{0}"
                     app:fontBold="@{kbviewmodel.inputTypeState!=null ? kbviewmodel.inputTypeState : InputTypeState.KR_NORMAL}"
                     app:customFontStyle="@{kbviewmodel.kbFontType}"
-                    app:onTouch="@{kbservice.repeatListenerChars[22]}" />
+                    app:onTouch="@{kbservice.repeatTouchListenerChars[22]}" />
 
                 <Button
                     android:id="@+id/btn_kr_qwerty_b"
@@ -469,7 +469,7 @@
                     app:fontBold="@{kbviewmodel.inputTypeState!=null ? kbviewmodel.inputTypeState : InputTypeState.KR_NORMAL}"
                     app:customFontStyle="@{kbviewmodel.kbFontType}"
                     app:layout_weight="@{kbviewmodel.kbRightSize}"
-                    app:onTouch="@{kbservice.repeatListenerChars[23]}"
+                    app:onTouch="@{kbservice.repeatTouchListenerChars[23]}"
                     app:weight_constant="@{1.0F}" />
 
                 <Button
@@ -487,7 +487,7 @@
                     app:fontBold="@{kbviewmodel.inputTypeState!=null ? kbviewmodel.inputTypeState : InputTypeState.KR_NORMAL}"
                     app:customFontStyle="@{kbviewmodel.kbFontType}"
                     app:layout_weight="@{kbviewmodel.kbRightSize}"
-                    app:onTouch="@{kbservice.repeatListenerChars[24]}"
+                    app:onTouch="@{kbservice.repeatTouchListenerChars[24]}"
                     app:weight_constant="@{1.0F}" />
 
                 <Button
@@ -505,7 +505,7 @@
                     app:fontBold="@{kbviewmodel.inputTypeState!=null ? kbviewmodel.inputTypeState : InputTypeState.KR_NORMAL}"
                     app:customFontStyle="@{kbviewmodel.kbFontType}"
                     app:layout_weight="@{kbviewmodel.kbRightSize}"
-                    app:onTouch="@{kbservice.repeatListenerChars[25]}"
+                    app:onTouch="@{kbservice.repeatTouchListenerChars[25]}"
                     app:weight_constant="@{1.0F}" />
 
                 <ImageButton
@@ -521,7 +521,7 @@
                     app:customTheme_padding="@{kbviewmodel.kbResultedHeight}"
                     app:customTheme_theme="@{kbviewmodel.kbTheme}"
                     app:customTheme_view="@{3}"
-                    app:onTouch="@{kbservice.repeatListenerDels[0]}" />
+                    app:onTouch="@{kbservice.repeatTouchListenerDels[0]}" />
             </LinearLayout>
 
             <LinearLayout
@@ -573,7 +573,7 @@
                     app:customTheme_view="@{2}"
                     app:fontBold="@{kbviewmodel.inputTypeState!=null ? kbviewmodel.inputTypeState : InputTypeState.KR_NORMAL}"
                     app:customFontStyle="@{kbviewmodel.kbFontType}"
-                    app:onTouch="@{kbservice.repeatListenerSpecials[0]}" />
+                    app:onTouch="@{kbservice.repeatTouchListenerSpecials[0]}" />
 
                 <Button
                     android:id="@+id/btn_kr_qwerty_space"
@@ -587,8 +587,7 @@
                     app:customTheme_theme="@{kbviewmodel.kbTheme}"
                     app:customTheme_view="@{2}"
                     app:fontBold="@{kbviewmodel.inputTypeState!=null ? kbviewmodel.inputTypeState : InputTypeState.KR_NORMAL}"
-                    app:customFontStyle="@{kbviewmodel.kbFontType}"
-                    app:onTouch="@{kbservice.repeatListenerSpecials[1]}" />
+                    app:customFontStyle="@{kbviewmodel.kbFontType}" />
 
                 <Button
                     android:id="@+id/btn_kr_qwerty_dot"
@@ -603,7 +602,7 @@
                     app:customTheme_view="@{2}"
                     app:fontBold="@{kbviewmodel.inputTypeState!=null ? kbviewmodel.inputTypeState : InputTypeState.KR_NORMAL}"
                     app:customFontStyle="@{kbviewmodel.kbFontType}"
-                    app:onTouch="@{kbservice.repeatListenerSpecials[2]}" />
+                    app:onTouch="@{kbservice.repeatTouchListenerSpecials[2]}" />
 
                 <ImageButton
                     android:id="@+id/imgbtn_kr_qwerty_enter"
